bugs fixed in collapsing component (#1424)

--- a/src/components/EnrollmentHistoryContainer/EnrollmentPlanCard/EnrollmentPlanCard.module.scss
+++ b/src/components/EnrollmentHistoryContainer/EnrollmentPlanCard/EnrollmentPlanCard.module.scss
@@ -198,3 +198,14 @@
     width: max-content;
   }
 }
+
+.shareBtnContainer {
+  display: flex;
+  .shareText {
+    font-size: 16px;
+    font-weight: bold;
+    color: #0052ce;
+    margin-top: 5px;
+    margin-right: 5px;
+  }
+}
