--- a/src/pages/dashbaord/DashboardActivityTable.module.scss
+++ b/src/pages/dashbaord/DashboardActivityTable.module.scss
@@ -38,7 +38,6 @@
 
 .filterButton {
   top: 90px;
-  left: 180px;
   position: relative;
   @include small() {
     top: 0;
